@@ -1,6 +1,7 @@
 Changelog for Yii User Management Module (Yum) 
 
 New in 0.8:
+- reworked messaging System (thyseus)
 - added new Relation widget that fixed MANY_MANY DropDownList problems (thyseus)
 - Wrapped Yum::t() around Yii::t() to allow easier translations (thyseus)
 - Renamed YumHelper to Yum (thyseus)
